...
        @Bindable var bindableAppModel = appModel

        NavigationStack {
            
            StopChoiceButtonView(directionText: model.from,
                                 selectedStopLocation: $bindableAppModel.fromStopLocation)
            .accessibility(identifier: "from_button")
            
            StopChoiceButtonView(directionText: model.to,
                                 selectedStopLocation: $bindableAppModel.toStopLocation)
            .accessibility(identifier: "to_button")

            NavigationLink("Search") {
                getTripResultsView(bindableAppModel: bindableAppModel)
            }
            .disabled(appModel.fromStopLocation == nil || appModel.toStopLocation == nil)
            .padding()
...
