...
        VStack {
            
            Button("Back to Main") {
                presentationMode.wrappedValue.dismiss()
            }
            .padding()
            .accessibility(identifier: "back_button")
            
            TextField("Bus stop name", text: $model.busStopTextFieldString)
                .textFieldStyle(.roundedBorder)
                .padding()
                .focused($focusedField, equals: .field)
                .onAppear {
...
            Button("Search") {
                Task {
                    await model.fetchStops()
                }
            }
            .padding()
            .accessibility(identifier: "search_button")

            List {
                ForEach(model.stops ?? []) { stopLocationOrCoordLocation in
                    VStack {
                        Text(stopLocationOrCoordLocation.stopLocation?.name ?? "")
                    }
...
