...
    },
    "Search" : {
      "localizations" : {
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sök"
          }
        }
      }
    },
    "Search for trip" : {
      "localizations" : {
...
